# ci-config

./: .ansible-lint  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .shellcheckrc  .zuul.yaml  README.rst  bindep.txt  conftest.py  constraints.txt  groups  molecule-requirements.txt  project.config  pytest.ini  requirements.txt  roles  setup.cfg  ss.json  test-requirements.in  test-requirements.txt  tox.ini  tripleo-ci-team  upstream-and-rdo-promotions.dashboard.json
ansible/: ansible.cfg.example  (+2 more)
ci-scripts/dlrnapi_promoter/: README.md  agent.py  common.py  config.py  config_defaults.yaml  config_legacy.py  conftest.py  containers_lists.py  convert_config_format.py  copy_quay_client.py  deprecated-dlrn-promoter.sh  dlrn-promoter-service.sh  dlrn-promoter.sh  dlrn.py  dlrn_client.py  dlrn_hash.py  dlrn_interface.py  dlrnapi_promoter.py  dlrnapi_promoter_db.py  docker_clients.py  dockerfile_client.py  images_sets.py  last-good.py  legacy_promoter.py  logic.py  promoter_defaults_experimental.yaml  promoter_integration_checks.py  qcow.py  qcow_client.py  registries_client.py  registry.py  registry_client.py  registry_image.py  repo_client.py  requirements.freeze.txt  requirements.txt  rollback.py  setup-local-machine.sh  setup.cfg  stage-config-secure.yaml  (+47 more)
ci-scripts/dlrnapi_promoter/config/: active_releases.sh  active_releases.yaml  defaults.yaml  master.ini  newton.ini  ocata.ini  pike-internal.ini  pike.ini  queens.ini  rocky.ini  stein.ini
ci-scripts/dlrnapi_promoter/config/CentOS-7/: master-component.ini  master-component.yaml  master.ini  master.yaml  ocata.ini  pike.ini  queens.ini  queens.yaml  rocky.ini  rocky.yaml  staging.ini  stein.ini  stein.yaml  train.ini  train.yaml
ci-scripts/dlrnapi_promoter/config/CentOS-7/deprecated/: master.ini
ci-scripts/dlrnapi_promoter/config/CentOS-8/: .master.ini.swp  legacy_master.ini  master.ini  master.yaml  train.ini  train.yaml  ussuri.ini  ussuri.yaml  victoria.ini
ci-scripts/dlrnapi_promoter/config/CentOS-8/component/: master-c9-stream.yaml  master.yaml  train.yaml  ussuri.yaml  victoria.yaml  wallaby.yaml
ci-scripts/dlrnapi_promoter/config/CentOS-9/component/: master.yaml  wallaby.yaml  zed.yaml
ci-scripts/dlrnapi_promoter/config/Fedora-28/: master.ini  stein.ini
ci-scripts/dlrnapi_promoter/config/RedHat-8/: master.ini  master.yaml  train.ini
ci-scripts/dlrnapi_promoter/config/old/: README.txt  ocata.ini  pike.ini  rocky.ini
ci-scripts/dlrnapi_promoter/config/staging/CentOS-7/: master.ini  master.yaml  train.ini
ci-scripts/dlrnapi_promoter/config/staging/CentOS-8/: master.ini  master.yaml
ci-scripts/dlrnapi_promoter/config_environments/: global_defaults.yaml
ci-scripts/dlrnapi_promoter/config_environments/rdo/: defaults.yaml
ci-scripts/dlrnapi_promoter/config_environments/rdo/CentOS-7/: master.yaml  queens.yaml  rocky.yaml  stain.yaml  stein.yaml  train.yaml
ci-scripts/dlrnapi_promoter/config_environments/rdo/CentOS-8/: master.yaml  train.yaml  ussuri.yaml  victoria.yaml  wallaby.yaml
ci-scripts/dlrnapi_promoter/config_environments/staging/: CentOS-7  CentOS-8  defaults.yaml  secure-registries.yaml
ci-scripts/dlrnapi_promoter/scripts/: deprecated-dlrn-promoter.sh
ci-scripts/dlrnapi_promoter/src/promoter/: config.py  dlrn_client.py  dlrn_hash.py  dlrnapi_promoter.py  logic.py  qcow_client.py  registries_client.py
ci-scripts/dlrnapi_promoter/src/stage/: stage_config.py  stage_containers.py  stage_dlrn.py  stage_orchestrator.py  stage_qcows.py  stage_server.py
ci-scripts/dlrnapi_promoter/stage_config/: defaults.yaml
ci-scripts/dlrnapi_promoter/stage_config/CentOS-7/: master.ini
ci-scripts/dlrnapi_promoter/stage_config/CentOS-8/: master.ini
ci-scripts/dlrnapi_promoter/stage_dbdata/: integration-pipeline.yaml  single-pipeline.yaml
ci-scripts/dlrnapi_promoter/tests/: test_common_unit.py  test_dlrn_hash_unit.py  test_ini_files_validation.py  test_qcow_client_unit.py  test_registries_client_unit.py  test_stage_dlrn_unit.py  test_stage_unit.py
ci-scripts/dlrnapi_promoter/tests/staging-setup/: DESIGN.txt  cleanup-containers.py  cleanup_staging.py  promoter_test.py  setup-containers.py  setup-dlrn.py  setup-images.py  setup_staging.py  stage-config-secure.yaml  stage-config.yaml  staged_environment.py  staging_environment.py  test-config.yaml  test_promoter.py  test_promoter_test.py  test_staging_environment.py
ci-scripts/dlrnapi_promoter/tests/staging_setup/: containers.py  dlrn_interface.py  dlrn_server.py  promoter_test.py  qcow_server.py  registries.py  stage-config-secure.yaml  stage-config.yaml  stage_config.py  staging_environment.py  test-config.yaml  test_promoter_test.py  test_staging_environment.py
(+1305 files in other folders)
