[metadata]
name = rdo-infra
summary = RDO-Infra
description-file =
    README.rst
author = RDO Community
author-email = rdo-list@redhat.com
home-page = https://github.com/redhat-openstack/rdo-infra
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/rdo-infra = jenkins

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
