[metadata]
name = ci-config
summary = ci-config
description-file =
    README.rst
author = RDO Community
author-email = rdo-list@redhat.com
home-page = https://github.com/rdo-infra/ci-config
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ci-config = jenkins

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
show-source = True
builtins = _
max-line-length = 80
