[metadata]
name = ci-config
summary = ci-config
description-file =
    README.rst
author = RDO Community
author-email = rdo-list@redhat.com
home-page = https://github.com/rdo-infra/ci-config
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ci-config = jenkins

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
builtins = _
max-line-length = 80
show-source = True
# TODO(ssbarnea): resolve below ignores in follow-up change:
ignore = E126,F401,H101,H102,H237,H301,H306,H401,W503
exclude = .tox