[metadata]
name = RDO Promoter
version = 0.0.1
author = TripleO Team
author_email = openstack-pcci@redhat.com
url = https://rdoproject.org
description = "RDO promoter server will promote dlrn, containers and images."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
platform = any
keywords = oooq, openstack, rdo, promoter
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://bugs.launchpad.net/tripleo/
    Changelog = https://github.com/rdo-infra/ci-config/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir =
    = src
packages = promoter, stage
test_suite = tests
setup_requires =
    setuptools

install_requires =
    ansible < 2.10.0
    cryptography
    dlrn
    dlrnapi_client>=0.9.1
    docker>=3.7  # Apache
    configparser
    MarkupSafe  # ansible soft-dependency
    paramiko
    selinux
    shyaml
    six
    jinja2
    pyyaml

tests_require =
    pytest

[options.package_data]
{name} = py.typed, _version.txt, *.pyi

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 80
doctests = True
exclude =  .git, .eggs, __pycache__, docs/, build/, dist/, tests/

[rdo_promoter]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
